# big-data

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  airflow.dockerfile  combined_kpis.xlsx  create_documentation.sh  cspell.json  docker-compose.yaml  kaggle.json  pyproject.toml  requirements_airflow.txt  startup.sh
big_data/: bike_dag.py  raw_data.py  split_data.py  test.ipynb
big_data/dags/: bike_dag.py
big_data/dags/helpers/: year_months.py
big_data/dags/hooks/: hdfs_hook.py
big_data/dags/operators/: directory_operator.py  hdfs_file_operator.py
big_data/plugins/: directory_plugin.py  hdfs_plugin.py
big_data/python/: calculate_kpis.py  combine_kpis.py  optimize_data.py
data/excel_files/: combined-kpis.csv
data/kaggle/: kaggle.json
data/output/: combined-kpis.xlsx
src/dags/: bike_dag.py
src/dags/operators/: file_operator.py  hdfs_file_operator.py  http_download_operator.py
src/python/: calc_kpis.py  calculate_kpis.py  comb_kpis.py  combine_kpis.py  optimize_data.py  raw_to_final.py
