[tool.poetry]
name = "big-data"
version = "0.1.0"
description = ""
authors = ["Felix Hoffmann <felix.emmanuel.hoffmann@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "big_data" }]

[tool.poetry.dependencies]
python = "~3.7"
apache-airflow = { version = "^1.10.6", extras = ["gcp-api", "postgres"] }
findspark = "^2.0.1"
pyspark = "^3.3.1"
jupyter = "^1.0.0"
pyarrow = "^0.11.0"
googlemaps = "^4.7.2"
hdfs = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
